print gc to stdout